# curso-fundamentos-web-js-python-2023-oct

clase_01/ejercicios/ejercicios/: 01.js  02.js  03.js  04.js  05.js  06.js  07.js  08.js  09.js  10.js  index.html
clase_01/ejercicios/tareas/: 01.js  02.js  03.js  04.js  05.js  06.js  07.js  index.html
clase_02/ejercicios/: index.html
clase_02/ejercicios/src/js/: aleatorios.js  arrays.js  entradas_salidas.js  operadores.js
clase_03/: index.html
clase_03/assets/css/: styles.css
clase_03/assets/js/: scripts.js
clase_04/Ejercicios/: 01.py  02.py  03.py  04.py  06.py  07.py  08.py  09.py  10.py
clase_04/src/poo/: atributos_metodos.py  cons_des_01.py  constructor_destructor.py
clase_05/: pyproject.toml
clase_05/ejercicios/: main.py
clase_05/ejercicios/templates/: formulario.html  index.html  list_libros.html
clase_06/: .gitignore  app.py  forms.py  models.py  pyproject.toml
clase_06/templates/: index.html  login.html
clase_06_ejercicios/: app.py  forms.py  pyproject.toml
clase_06_ejercicios/templates/: books.html  formulario.html
clase_07/: app.db  app.py  config.py  forms.py  models.py  pyproject.toml
clase_07/clase_07_script/: Script.sql
clase_07/templates/: dashboard.html  index.html  login.html  register.html
clase_08/: app.db  app.py  forms.py  models.py  pyproject.toml
clase_08/instance/: app.db
clase_08/static/: styles.css
clase_08/templates/: base_template.html  index.html  login.html  protected.html  signup.html
